# frsh

./: .gitignore  README.md  pyproject.toml
src/frsh/: funnel.py  main.py  runtime.py
