[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project]
name = "frsh"
version = "0.1.0"
description = "Launch short-lived reverse SSH tunnels through a temporary frps gateway"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
frsh = "frsh:main"
